--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -6,14 +6,13 @@ import {
 import {
   PrimaryAdExample,
   SecondaryAdExample,
-  JobAdExample,
 } from "@site/src/components/AdExamples";
 
 # Sponsor the newsletter
 
-Reach a **qualified and engaged** audience of **experimented React developers** with an ad in our [weekly newsletter](/newsletter).
+Reach a **qualified and engaged** audience of **mid/senior React developers** with an ad in our [weekly newsletter](/newsletter).
 
-Last updated: **September 2023**.
+Last updated: **October 2023**.
 
 ---
 
@@ -21,20 +20,31 @@ Last updated: **September 2023**.
 
 <ul>
   <li>
-    <b>Advertise</b><>: a product, course, conference, job offer...</>
+    <b>Advertise</b>
+    <>: a product, course, blog post, conference...</>
   </li>
   <li>
-    <b>Placements</b><>: 1st sponsor, 2nd sponsor, job offers, custom...</>
+    <b>Placements</b>
+    <>: 1st sponsor, 2nd sponsor, quick link, custom...</>
   </li>
   <li>
-    <b>Subscribers count</b><>: </>
+    <b>Subscribers count</b>
+    <>: </>
     <span>{newsletterStats.all.subscribersCount}</span>
   </li>
   <li>
-      <><b>Open-rate</b><>: </><span>{newsletterStats.all.openRate}%</span></>
+    <>
+      <b>Open-rate</b>
+      <>: </>
+      <span>{newsletterStats.all.openRate}%</span>
+    </>
   </li>
   <li>
-      <><b>Click-rate</b><>: </><span>{newsletterStats.all.clickRate}%</span></>
+    <>
+      <b>Click-rate</b>
+      <>: </>
+      <span>{newsletterStats.all.clickRate}%</span>
+    </>
   </li>
   <li>
     <b>Localized</b>
@@ -42,26 +52,24 @@ Last updated: **September 2023**.
   </li>
   <li>
     <b>Readers at</b>
-    <>: Meta, Google, Microsoft, GitHub, Shopify, Amazon, Stripe,
-    Cloudflare, ByteDance, Figma, Uber...</>
+    <>
+      {
+        ": Meta, Google, Microsoft, GitHub, Shopify, Amazon, Stripe,Cloudflare, ByteDance, Figma, Uber..."
+      }
+    </>
   </li>
   <li>
     <b>Most popular offer</b>
-    <>:{" "}</>
-    <a href="#sponsor-1st">1st sponsor - 4 issues - sent to all subscribers</a>
+    <>: </>
+    <a href="#sponsor-1st">4 x 1st sponsor slots</a>
   </li>
   <li>
-    <b>
-      <a href={sponsorshipCalendarLink}>Sponsorship calendar</a>
-    </b>
-    <>: check for the next availabilities</>
+    <b>Contact us</b>
+    <>: </>
+    <a href="mailto:sponsor@thisweekinreact.com?subject=Sponsorship">
+      <>sponsor@thisweekinreact.com</>
+    </a>
   </li>
-  <li>
-    <b>
-      <a href="#order-process">Order now!</a>
-    </b>
-  </li>
-
 </ul>
 
 ---
@@ -79,19 +87,21 @@ Our editorial line assumes our readers are:
 - **experienced**: they know React well and are not interested in beginner-friendly content
 - **passionate**: they want to stay on top of their favorite technology
 - **open-minded**: they also want to know about non-React news that are relevant to them
-- **respecting their time**: they want a content pre-filter instead of scrolling on Twitter
+- **respecting their time**: they want a pre-filtered qualitative content
 
 <details>
   <summary>What makes this newsletter unique</summary>
 
-It is a weekly curation of news **for** React developers, not just about React.
+It is a weekly curation of news **for** React developers, not just about React. And in particular for **mid/senior** developers that are already productive using React.
 
 We focus on what's **really new** in an **exhaustive** way. There's usually **a lof of external links**, but readers aren't expected to click all of them: simply reading the headlines and comments usually provide enough value.
 
 We **filter content** heavily, and generally exclude:
 
 - content produced for SEO, based on keyword analysis
-- listicles, 101's, verbose step-by-step tutorials
+- listicles, 101's
+- verbose step-by-step tutorials
+- promotional product tutorials
 - most UI libraries and npm packages
 
 </details>
@@ -99,11 +109,9 @@ We **filter content** heavily, and generally exclude:
 <details>
   <summary>About the author - Sébastien Lorber</summary>
 
-[**Sébastien Lorber**](https://www.linkedin.com/in/sebastienlorber) ([@sebastienlorber](https://twitter.com/sebastienlorber)) is a T-shaped software engineer, with a strong React and React-Native expertise.
+[**Sébastien Lorber**](https://www.linkedin.com/in/sebastienlorber) ([@sebastienlorber](https://twitter.com/sebastienlorber)) is a **React early-adopter** and user since [January 2014](https://stackoverflow.com/questions/21352587/does-react-use-requestanimationframe-if-so-how-does-it-use-it).
 
-He became a **React early-adopter** in [January 2014](https://stackoverflow.com/questions/21352587/does-react-use-requestanimationframe-if-so-how-does-it-use-it).
-
-With **nearly a decade of React experience**, he has the credibility and authority to know exactly what is interesting to a senior React developer, and is able to provide **unique insight**.
+With **a decade of React experience**, he has the credibility and authority to know exactly what is interesting to a senior React developer, and is able to provide **unique insight**.
 
 Since 2020, he has been **working for Meta** as a freelancer. He is the **lead maintainer of [Docusaurus](https://github.com/facebook/docusaurus)**, a React static site generator for creating beautiful documentation websites. It is one of Meta's most successful open source project. [Docusaurus 2.0 launched recently](https://docusaurus.io/blog/2022/08/01/announcing-docusaurus-2.0), and his managers and colleagues are satisfied of his work ([1](https://twitter.com/JoelMarcey/status/1554136849198637058), [2](https://twitter.com/zpao/status/1554147108961128451), [3](https://twitter.com/yangshunz/status/1554008007331041281)). This newsletter website itself is built with Docusaurus!
 
@@ -113,19 +121,21 @@ Since 2020, he has been **working for Meta** as a freelancer. He is the **lead m
 
 ### 📈 Stats {#stats}
 
-<SponsoringTabsStats />
+<SponsoringTabsStats>
+  <details>
+    <summary><b>Email provider screenshot</b>{" (February 2023)"}</summary>
+        <img alt="screenshot" src="https://user-images.githubusercontent.com/749374/223171660-1fe93f8a-e67d-48c1-94ad-d0c6a1afed29.png" />
+  </details>
+  <details>
+    <summary><b>About the open-rate </b> - an unreliable metric</summary>
 
-<br />
+            - [iOS 15 prevents email tracking](https://phoscreative.com/articles/ios15-email-marketing/)
+            - [Gmail clipping prevents email tracking](https://convertkit.com/sender-reputation)
+            - Readers use privacy tooling: [StoopInbox](https://stoopinbox.com/), [Kill The Newsletter](https://kill-the-newsletter.com/), [FeedBin](https://feedbin.com/), [ReadWise](https://readwise.io/), [Feedly](https://feedly.com/), [Newsletterss](https://newsletterss.com/), [Mailbrew](https://mailbrew.com/), [ProtonMail](https://proton.me/), [Apple Private Relay Email](https://developer.apple.com/documentation/sign_in_with_apple/sign_in_with_apple_js/communicating_using_the_private_email_relay_service), [Firefox Relay](https://relay.firefox.com/)...
 
-:::caution About the open-rate
+    </details>
 
-In practice, the open-rate is likely higher because:
-
-- [iOS 15 prevents email tracking](https://phoscreative.com/articles/ios15-email-marketing/)
-- [Gmail clipping prevents email tracking](https://convertkit.com/sender-reputation)
-- Our audience is using: [StoopInbox](https://stoopinbox.com/), [Kill The Newsletter](https://kill-the-newsletter.com/), [FeedBin](https://feedbin.com/), [ReadWise](https://readwise.io/), [Feedly](https://feedly.com/), [Newsletterss](https://newsletterss.com/), [Mailbrew](https://mailbrew.com/), [ProtonMail](https://proton.me/), [Apple Private Relay Email](https://developer.apple.com/documentation/sign_in_with_apple/sign_in_with_apple_js/communicating_using_the_private_email_relay_service), [Firefox Relay](https://relay.firefox.com/)...
-
-:::
+</SponsoringTabsStats>
 
 <br />
 
@@ -139,25 +149,27 @@ Readers regularly express their satisfaction. Check our **[Twitter testimonials]
 
 ## Placements {#placements}
 
-The newsletter structure stays the same every week, offering 3 sponsorship ad placements:
+The newsletter structure stays the same every week, offering multiple sponsored placements:
 
-- [**🥇 1st sponsor**](#sponsor-1st)
-- 🔗 React news
-- [**🥈 2nd sponsor**](#sponsor-2nd)
-- 🔗 React-Native news
-- 🔗 Other news
-- 🤣 Funny meme
+- 💸 [**1st sponsor**](#sponsor-1st)
+- ⚛️ React section:
+  - 👀 Headlines
+  - 💸 [**Quick Link sponsor**](#sponsor-quick-link)
+  - 🔗 Links
+- 💸 [**2nd sponsor**](#sponsor-2nd)
+- 📱 React-Native section:
+  - 👀 Headlines
+  - 💸 [**Quick Link sponsor**](#sponsor-quick-link)
+  - 🔗 Links
+- 🔀 Other section
+- 🤭 Fun section
 
 <span>
-  Check our{" "}
+  <>Check our </>
   <b>
     <a href={lastIssueLink}>last newsletter issue</a>
   </b>
-
-{" "}
-
-<p>{"to get a better idea!"}</p>
-
+  <> to get a better idea!</>
 </span>
 
 <br />
@@ -166,8 +178,6 @@ The newsletter structure stays the same every week, offering 3 sponsorship ad pl
 :::tip
 
 Each placement has a different price and ad copy constraints.
-
-Use this [**character counter**](https://wordcounter.net/character-count) to ensure your ad copy respect those constraints.
 
 :::
 
@@ -181,7 +191,7 @@ This sponsorship ad placement offers a generous ad copy length, in the first hal
   <summary>Ad constraints and example</summary>
 
 - **Title**: 55 characters max, 1 link
-- **Body**: 900 characters max, max 2 links, max 3 line breaks, decent usage of bold/smileys/list
+- **Body**: 800 characters max, max 2 links, max 3 line breaks, decent usage of bold/smileys/list
 - **Image**: horizontal banner - ideally 1200x600px
 
 <PrimaryAdExample />
@@ -215,15 +225,15 @@ This sponsorship ad placement appears in the middle of the newsletter, in betwee
 
 Reach out to [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Custom%20sponsorship%20offering) to discuss in details your sponsorship needs.
 
-We can offer premium sponsorship opportunities:
-
 - A sponsored placement on our occasional [React articles](/articles), that we also send by email
 - A sponsored honest review of your product
-- A sponsored issue 100% dedicated to your product
+- A sponsored issue dedicated to your product
 
 ---
 
 ## Order process {#order-process}
+
+Just send us an email at [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Sponsorships) and we'll explain everything.
 
 ### ⚡️ Now {#now}
 
@@ -296,31 +306,22 @@ You can book a sponsorship offer without providing the ad copy immediately. We k
 
 :::
 
-:::tip
-
-Send us your ad copy by email as rich text, including the links and formatting:
-
-<PrimaryAdExample />
-
-:::
-
 ---
 
 ## To sponsor or not?
 
-The audience of this newsletter is more qualitative than quantitative. Make sure your ad is relevant to the target audience.
+Make sure your ad is relevant to the target audience.
 
 ### ✅ Good fit
 
-- Reach **experimented React developers**
+- Reach **mid/senior React developers**
 - Reach **cross-platform enthusiasts**, using both **React and React-Native**
-- Reach a unique audience of **React developers speaking French 🇫🇷**
 - Reach **open-minded** developers using JavaScript, TypeScript, Node.js...
 - Reach **decision makers**: CTOs, tech leads, engineering managers...
 
 ### ❌ Bad fit
 
-- Reach an audience of **junior** React developers
+- Reach an audience of only **junior** React developers
 - Promote something **irrelevant** to React developers
 
 :::info
@@ -333,16 +334,12 @@ We will tell you if we think your ad is not a good fit.
 
 ## Past Sponsors
 
-These companies previously sponsored the newsletter:
-
-- **Conferences**: App.js, React Brussels, Chain React, BeJS...
-- **Products**: Stream, Storyblok, Retool, Sizzy, CoderPad, React-Bricks, Refine, Suncel, React-Admin, TinaCMS, Checkly, SurveyJS, FrontendMasters, Flycode, Axiom, Meteor, Hashnode, Sunsama, RemixTape, Storetasker, Porkbun, UXPin, Cambly, Nylas, Indy, TechTree...
-- **Job offers**: Causal, Passionfroot, G2i, Software Mansion, Cajoo, Front, Cycle, Showtime, Luko, Matters, Maki, Nabla, Pelico, Masteos, Shotgun, Pricemoov, Germinal, WeCasa, iFeelSmart, BAM, Premier Octet, My Little Team...
+**Previous sponsors include**: Clerk, Highlight, FrontendMaster, Axiom, Ably, Stream, Software Mansion, Storyblok, Retool, Sizzy, CoderPad, React-Bricks, Refine, Suncel, React-Admin, TinaCMS, Checkly, SurveyJS, FrontendMasters, Flycode, Meteor, Hashnode, Sunsama, RemixTape, Storetasker, Porkbun, UXPin, Cambly, Nylas, Indy, TechTree...
 
 ## FAQ
 
 <details>
-  <summary>Why are some dates marked as unavailable</summary>
+  <summary>Why are some dates unavailable</summary>
 
 This newsletter is mostly run by a [single person](https://twitter.com/sebastienlorber) who sometimes has to take vacations 😅
 
@@ -380,7 +377,7 @@ In the future, we will look into providing a good reporting automatically.
 <details>
   <summary>Why are prices higher for a single issue?</summary>
 
-To keep a positive ROI, we have to take into account the time it takes to manage sponsors: explanations, booking, invoicing, ad copy reviews, questions...
+To keep a positive ROI for us, we have to take into account the time it takes to manage sponsorships: sales, support, booking, invoicing, ad copy reviews, email integration...
 
 </details>
 
