sponsorship page changes

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -159,8 +159,13 @@ Readers regularly express their satisfaction. Check our **[Twitter testimonials]
 
 ## Placements {#placements}
 
-The newsletter structure stays the same every week, offering multiple sponsored placements:
+We offer multiple sponsored placements, each of them has a different price.
 
+The newsletter structure stays the same every week:
+
+<BrowserWindow url={lastIssueLink}>
+
+- 👋 Introduction
 - 💸 [**1st sponsor**](#sponsor-1st)
 - ⚛️ React section:
   - 👀 Headlines
@@ -174,6 +179,8 @@ The newsletter structure stays the same every week, offering multiple sponsored 
 - 🔀 Other section
 - 🤭 Fun section
 
+</BrowserWindow>
+
 <span>
   <>Check our </>
   <b>
@@ -185,17 +192,9 @@ The newsletter structure stays the same every week, offering multiple sponsored 
 <br />
 <br />
 
-:::tip
-
-Each placement has a different price and ad copy constraints.
-
-:::
-
-<br />
-
 ### 🥇 1st sponsor {#sponsor-1st}
 
-This sponsorship ad placement offers a generous ad copy length, in the first half of the newsletter.
+This placement offers a generous ad copy length, in the first half of the newsletter.
 
 <details>
   <summary>Ad constraints and example</summary>
@@ -214,7 +213,7 @@ This sponsorship ad placement offers a generous ad copy length, in the first hal
 
 ### 🥈 2nd sponsor {#sponsor-2nd}
 
-This sponsorship ad placement appears in the middle of the newsletter, in between the React and React-Native sections.
+This placement appears in the middle of the newsletter, in between the React and React-Native sections.
 
 <details>
   <summary>Ad constraints and example</summary>
@@ -243,21 +242,26 @@ Reach out to [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?su
 
 ## Order process {#order-process}
 
-Just send us an email at [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Sponsorships) and we'll explain everything.
+The easiest way is to simply contact us, we'll get back to you asap, explaining everything:
+
+- send an email at [**sponsor@thisweekinreact.com**](mailto:sponsor@thisweekinreact.com?subject=Sponsorships)
+- fill the [**contact form**](https://thisweekinreact.com/sponsor/form)
 
 ### ⚡️ Now {#now}
 
-To order a sponsorship slot, follow these steps:
+Alternatively, you can also provide us with all the information we need straight away.
 
-- Select your [placement](#placements) and number of issues
-- Select available dates on the [public sponsorship calendar](https://thisweekinreact.com/calendar)
-- Prepare your company details for invoicing
-- Email us at [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Sponsorship)
-- We emit an invoice and finalize the booking of the adverting slots
+To order a sponsorship slot, we need you to:
+
+- select your [placement](#placements) and number of issues
+- select available dates on the [public sponsorship calendar](https://thisweekinreact.com/calendar)
+- prepare your company details for invoicing
+- email us at [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Sponsorship)
+- acknowledge receipt of the invoice we sent you
 
 <details>
 
-<summary>We suggest using this order email template</summary>
+<summary>We suggest using the following email template</summary>
 
 ```txt
 Hi
@@ -292,29 +296,14 @@ We will send the ad copy before the 31/08/2022
 
 </details>
 
-:::tip
-
-You don't have to book consecutive ad slots. Spreading your ads over time can give a better campaign ROI.
-
-:::
-
 ### ⏱ Later {#later}
 
 Once the order is complete:
 
-- You pay the invoice under 30 days before the publication date
-- You provide the ad copy
-- We review and validate the ad copy
-- We send the ad in the newsletters 🎉
-
-:::info
-
-You can book a sponsorship offer without providing the ad copy immediately. We kindly ask you to:
-
-- provide an estimated date to send the ad copy: we will schedule a recall
-- provide the final ad copy at least **one week before the first publication date**
-
-:::
+- you pay the invoice under 30 days before the publication date
+- you provide the ad copy at least one week before the issue date
+- we review and validate the ad copy
+- we include the ad in the newsletters 🎉
 
 ---
 
@@ -398,7 +387,7 @@ Why is the sponsorship calendar public?
 
 This newsletter is being built in public, in a transparent way:
 
-- The [sponsorship calendar](https://thisweekinreact.com/calendar) is public
+- Check our [public spreadsheet](https://thisweekinreact.com/calendar)
 - The [Indie Hackers product page](https://thisweekinreact.com/ih) provides monthly reportings on turnover, growth...
 
 In case you don't want your company's name to appear in our public calendar, please give us a company alias name.
