sponsorship page changes

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -232,11 +232,12 @@ This placement appears in the middle of the newsletter, in between the React and
 
 ### 🧑‍🎨 Custom
 
-Reach out to [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Custom%20sponsorship%20offering) to discuss in details your sponsorship needs.
+Reach out to [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Custom%20sponsorship%20offering) to discuss in details your sponsorship needs. We can create a custom offer to help you achieve your marketing goals, including:
 
-- A sponsored placement on our occasional [React articles](/articles), that we also send by email
-- A sponsored honest review of your product
-- A sponsored issue dedicated to your product
+- custom offer packages
+- sponsored placement on our occasional [React articles](/articles)
+- sponsored honest review of your product
+- sponsored issue dedicated to your product
 
 ---
 
