sponsorship page changes

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -166,15 +166,15 @@ The newsletter structure stays the same every week:
 <BrowserWindow url={lastIssueLink}>
 
 - 👋 Introduction
-- 💸 [**1st sponsor**](#sponsor-1st)
+- [**🥇 1st sponsor**](#sponsor-1st)
 - ⚛️ React section:
   - 👀 Headlines
-  - 💸 [**Quick Link sponsor**](#sponsor-quick-link)
+  - [**⚡️Quick Link sponsor**](#sponsor-quick-link)
   - 🔗 Links
-- 💸 [**2nd sponsor**](#sponsor-2nd)
+- [**🥈 2nd sponsor**](#sponsor-2nd)
 - 📱 React-Native section:
   - 👀 Headlines
-  - 💸 [**Quick Link sponsor**](#sponsor-quick-link)
+  - [**⚡️Quick Link sponsor**](#sponsor-quick-link)
   - 🔗 Links
 - 🔀 Other section
 - 🤭 Fun section
@@ -199,6 +199,8 @@ This placement offers a generous ad copy length, in the first half of the newsle
 <details>
   <summary>Ad constraints and example</summary>
 
+**Placement constraints:**
+
 - **Title**: 55 characters max, 1 link
 - **Body**: 800 characters max, max 2 links, max 3 line breaks, decent usage of bold/smileys/list
 - **Image**: horizontal banner - ideally 1200x600px
@@ -216,19 +218,53 @@ This placement offers a generous ad copy length, in the first half of the newsle
 This placement appears in the middle of the newsletter, in between the React and React-Native sections.
 
 <details>
-  <summary>Ad constraints and example</summary>
+    <summary>Ad constraints and example</summary>
 
-- **Title**: 55 characters max, 1 link
-- **Body**: 600 characters max, max 1 link, max 2 line breaks, decent usage of bold/smileys/list
-- **Image**: horizontal banner - ideally 1200x600px
+    **Placement constraints:**
+    - **Title**: 55 characters max, 1 link
+    - **Body**: 600 characters max, max 1 link, max 2 line breaks, decent usage of bold/smileys/list
+    - **Image**: horizontal banner - ideally 1200x600px
 
-<SecondaryAdExample />
+    <SecondaryAdExample />
 
 </details>
 
 <SponsoringTabsSecondSponsor />
 
 <br />
+
+### ⚡️ Quick Link {#sponsor-quick-link}
+
+Quick Links are sponsored links inserted in the React or React-Native newsletter sections, alongside the regular content. **Subscribers can't miss them**, right between the section headlines and the list of links.
+
+<details>
+    <summary>Ad constraints and example</summary>
+
+    **Placement constraints:**
+    - **Title**: 140 characters max
+    - **Title**: plain text, no bold/emojis/uppercase and other attention-grabbing hacks
+    - **Title**: respects pattern `<ProductName> - <Description>` whenever possible
+
+    **Quick Links examples:**
+    - [Zero To Shipped - Master Fast-Paced Fullstack Development and finally ship that product](https://www.zerotoshipped.com/)
+    - [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
+    - [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
+    - [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
+
+</details>
+
+<br />
+
+:::tip
+
+Quick Links are ideal to:
+
+- promote a React or React-Native product
+- promote a or a **piece of content** such as a product tutorial blog post
+- improve your **SEO profile** with a new do-follow backlink
+- remind the audience of an already-promoted product and stay top-of-mind
+
+:::
 
 ### 🧑‍🎨 Custom
 
@@ -248,7 +284,7 @@ The easiest way is to simply contact us, we'll get back to you asap, explaining 
 - send an email at [**sponsor@thisweekinreact.com**](mailto:sponsor@thisweekinreact.com?subject=Sponsorships)
 - fill the [**contact form**](https://thisweekinreact.com/sponsor/form)
 
-### ⚡️ Now {#now}
+### ⏱ Now {#now}
 
 Alternatively, you can also provide us with all the information we need straight away.
 
@@ -297,7 +333,7 @@ We will send the ad copy before the 31/08/2022
 
 </details>
 
-### ⏱ Later {#later}
+### ⏳ Later {#later}
 
 Once the order is complete:
 
