sponsorship page changes

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -243,7 +243,7 @@ Quick Links are sponsored links inserted in the React or React-Native newsletter
     **Placement constraints:**
     - **Title**: 140 characters max
     - **Title**: plain text, no bold/emojis/uppercase and other attention-grabbing hacks
-    - **Title**: respects pattern `<ProductName> - <Description>` whenever possible
+    - **Title**: respects the pattern `ProductName - Description` whenever possible
 
     **Quick Links examples:**
     - [Zero To Shipped - Master Fast-Paced Fullstack Development and finally ship that product](https://www.zerotoshipped.com/)
@@ -252,6 +252,8 @@ Quick Links are sponsored links inserted in the React or React-Native newsletter
     - [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
 
 </details>
+
+<SponsoringTabsQuickLinkSponsor />
 
 <br />
 
