sponsorship page changes

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -286,15 +286,13 @@ The easiest way is to simply contact us, we'll get back to you asap, explaining 
 
 ### ⏱ Now {#now}
 
-Alternatively, you can also provide us with all the information we need straight away.
-
-To order a sponsorship slot, we need you to:
+Alternatively, you can also provide us with all the information we need straight away, and follow these steps:
 
 - select your [placement](#placements) and number of issues
 - select available dates on the [public sponsorship calendar](https://thisweekinreact.com/calendar)
 - prepare your company details for invoicing
 - email us at [sponsor@thisweekinreact.com](mailto:sponsor@thisweekinreact.com?subject=Sponsorship)
-- acknowledge receipt of the invoice we sent you
+- acknowledge receipt of our invoice
 
 <details>
 
