--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -8,6 +8,8 @@ unlisted: true
 
 Salut à tous !
 
+Pause congé!
+
 <Todo />
 
 <!-- truncate -->
@@ -34,7 +36,25 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
+Remix unstable Vite support: https://twitter.com/ericsimons40/status/1712924772043227192 https://github.com/remix-run/remix/discussions/7632
+
+https://twitter.com/remix_run/status/1712881668560691613
+
+https://twitter.com/remix_run/status/1713916968753885244
+
+---
+
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
+
+- [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
+- React-Forget high-level talk: https://twitter.com/acemarke/status/1712606192449515786
+- [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
+- [Next.js Conf Speakers](https://nextjs.org/conf/speakers) https://twitter.com/nextjs/status/1712921257736388661
+- [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
+- [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
+- Astro 3.3 https://twitter.com/astrodotbuild/status/1712487761570115931
+- coconut xr https://twitter.com/coconut_xr/status/1712504946883510743
+- [Next-international v1.1](https://github.com/QuiiBz/next-international/releases/tag/1.1.0) https://twitter.com/tomlienard/status/1712466650434269320
 
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
@@ -61,9 +81,10 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
-
 - 💸 [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
+- visionCAmera x7 faster https://twitter.com/mrousavy/status/1712855140439363880
+- Gluestack v1 - https://twitter.com/sanketsahu/status/1712729417309626570
+- [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
 
 ---
 
@@ -85,13 +106,24 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Oslo - A collection of auth-related utilities](https://github.com/pilcrowOnPaper/oslo)
+- [The design system ecosystem](https://bradfrost.com/blog/post/the-design-system-ecosystem/)
+- [CSS relative color syntax - in Chrome 119](https://developer.chrome.com/blog/css-relative-color-syntax/)
+- node security releases https://twitter.com/nodejs/status/1712505202383732831
+- [You can't get faster than No Build](https://world.hey.com/dhh/you-can-t-get-faster-than-no-build-7a44131c)
+- Parcel 2.10 https://twitter.com/devongovett/status/1712152854339998027 https://twitter.com/devongovett/status/1712169214872867288
+
+- [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/drewhamlett/status/1712965434973020381
+
+https://twitter.com/BHolmesDev/status/1713177728143241403
+
+https://twitter.com/jamonholmgren/status/1712886824283394177
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
