--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -46,6 +46,7 @@ https://twitter.com/remix_run/status/1713916968753885244
 
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
 
+- [React memo is good actually](https://timtech.blog/posts/react-memo-is-good-actually/)
 - [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
 - React-Forget high-level talk: https://twitter.com/acemarke/status/1712606192449515786
 - [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
@@ -55,6 +56,10 @@ https://twitter.com/remix_run/status/1713916968753885244
 - Astro 3.3 https://twitter.com/astrodotbuild/status/1712487761570115931
 - coconut xr https://twitter.com/coconut_xr/status/1712504946883510743
 - [Next-international v1.1](https://github.com/QuiiBz/next-international/releases/tag/1.1.0) https://twitter.com/tomlienard/status/1712466650434269320
+
+- [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/)
+
+- [Statically analysing React components for fun and profit](https://www.youtube.com/live/JuedZFbhyL0?si=IKCHdmEnFsf7AVO3&t=1522): Sathya travaille sur le compiler React Forget. Il nous dévoile des détails intéressants sur le compiler tant attendu, dont on devrait entendre à nouveau parler dans les prochaines semaines, notamment à la conf React-Advanced. Le compiler peut fonctionner sur du JS non typé. Il comprend la convention de nommage des hooks. Il raisonne localement, capable d'optimiser les composants en parallèle ou d'être adopté incrémentalement.
 
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
@@ -85,12 +90,17 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 - visionCAmera x7 faster https://twitter.com/mrousavy/status/1712855140439363880
 - Gluestack v1 - https://twitter.com/sanketsahu/status/1712729417309626570
 - [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
+- [radix-ui-react-native-icons](https://github.com/Eronred/radix-ui-react-native-icons)
+- [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
 
 ---
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
+- [Intégrez vos données métiers au modèle OpenAI GPT avec Next.js](https://www.premieroctet.com/blog/integrez-vos-donnees-metiers-au-modele-openai-gpt-avec-nextjs)
+- [Next 13.4 : Tour d’horizon des server actions](https://www.premieroctet.com/blog/next-server-actions)
+- [React Native Paris #4 - 19 octobre chez Octo](https://www.meetup.com/fr-FR/react-native-paris-meetup/events/296450009/)
+- [Les nouveautés de Next.JS 13 qui changent tout](https://www.youtube.com/watch?v=34Utg0x06rI)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -106,6 +116,8 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🔀 Autre {#other}
 
+- [Netlify Functions 2.0](https://www.netlify.com/blog/introducing-netlify-functions-2-0/)
+- [Understanding Cookies](https://vercel.com/guides/understanding-cookies)
 - [Oslo - A collection of auth-related utilities](https://github.com/pilcrowOnPaper/oslo)
 - [The design system ecosystem](https://bradfrost.com/blog/post/the-design-system-ecosystem/)
 - [CSS relative color syntax - in Chrome 119](https://developer.chrome.com/blog/css-relative-color-syntax/)
@@ -114,6 +126,8 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 - Parcel 2.10 https://twitter.com/devongovett/status/1712152854339998027 https://twitter.com/devongovett/status/1712169214872867288
 
 - [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
+- [TC39-TG4 - New Task Group created to standardize Source Maps](https://www.ecma-international.org/news/ecma-tc39-ecmascript-initiates-a-new-task-group-to-standardize-source-maps//)
+- [async-cache-dedupe v2](https://github.com/mcollina/async-cache-dedupe)
 
 ---
 
