--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -36,31 +36,61 @@ Learn React.js from the ground up to advanced topics like performance, testing, 
 
 ## ⚛️ React {#react}
 
-Remix unstable Vite support: https://twitter.com/ericsimons40/status/1712924772043227192 https://github.com/remix-run/remix/discussions/7632
+Remix unstable Vite support:
+
+https://twitter.com/ericsimons40/status/1712924772043227192
+
+https://github.com/remix-run/remix/discussions/7632
 
 https://twitter.com/remix_run/status/1712881668560691613
 
 https://twitter.com/remix_run/status/1713916968753885244
 
+https://remix.run/docs/en/dev/future/vite
+
+Remix 2.1 https://github.com/remix-run/remix/releases https://twitter.com/remix_run/status/1713967835410514103
+
+---
+
+[Node.js 21 Available Now!](https://openjsf.org/announcement/2023/10/17/node-js-21-available-now/)
+
+https://twitter.com/sebastienlorber/status/1714321007618535792
+
+https://github.com/nodejs/node/pull/45684
+
+fetch?
+
+backpressure?
+
+https://twitter.com/cyco130/status/1714326606670389428
+
+---
+
+TanStack Query v5
+
+https://tanstack.com/blog/announcing-tanstack-query-v5
+
+https://twitter.com/TkDodo/status/1714262102305632643
+
 ---
 
 - 💸 [Create collaborative applications like Figma and Miro in a few lines of code with Ably's in-app collaboration SDK](https://hubs.la/Q023nqgg0)
-
-- [React memo is good actually](https://timtech.blog/posts/react-memo-is-good-actually/)
-- [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
-- React-Forget high-level talk: https://twitter.com/acemarke/status/1712606192449515786
-- [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
-- [Next.js Conf Speakers](https://nextjs.org/conf/speakers) https://twitter.com/nextjs/status/1712921257736388661
-- [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
-- [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
-- Astro 3.3 https://twitter.com/astrodotbuild/status/1712487761570115931
-- coconut xr https://twitter.com/coconut_xr/status/1712504946883510743
-- [Next-international v1.1](https://github.com/QuiiBz/next-international/releases/tag/1.1.0) https://twitter.com/tomlienard/status/1712466650434269320
-
-- [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/)
-
-- [Statically analysing React components for fun and profit](https://www.youtube.com/live/JuedZFbhyL0?si=IKCHdmEnFsf7AVO3&t=1522): Sathya travaille sur le compiler React Forget. Il nous dévoile des détails intéressants sur le compiler tant attendu, dont on devrait entendre à nouveau parler dans les prochaines semaines, notamment à la conf React-Advanced. Le compiler peut fonctionner sur du JS non typé. Il comprend la convention de nommage des hooks. Il raisonne localement, capable d'optimiser les composants en parallèle ou d'être adopté incrémentalement.
-
+- 📜 [Embedding Remix in Directus](https://echobind.com/post/embedding-remix-in-directus)
+- 📜 [A love letter to the Remix loader](https://laconicwit.com/a-love-letter-to-the-remix-loader/)
+- 📜 [Programmatic SEO in Next.js](https://practicalprogrammatic.com/blog/programmatic-seo-in-nextjs/)
+- 📜 [Classed Components](https://flexible.dev/blog/single-line-components/)
+- 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
+- 📜 [Unlocking the Power of Storybook](https://formidable.com/blog/2023/unlocking-the-power-of-storybook/)
+- 📜 [React memo is good actually](https://timtech.blog/posts/react-memo-is-good-actually/)
+- 📜 [Storybook - Introducing the Theme Switcher addon](https://storybook.js.org/blog/introducing-theme-switcher-addon/)
+- 📜 [How we optimized package imports in Next.js](https://vercel.com/blog/how-we-optimized-package-imports-in-next-js) https://twitter.com/shuding_/status/1712849886050218279
+- 📜 [React useTransition: performance game changer or...?](https://www.developerway.com/posts/use-transition)
+- 📜 [The Rise of Next.js: Why It's the Full-Stack Framework of Choice for Modern Websites](https://www.felixvemmer.com/blog/why-next-js/)
+- 📦 [create-t3-app v7.22 - add Next.js App Router option](https://github.com/t3-oss/create-t3-app/releases/tag/create-t3-app%407.22.0) https://twitter.com/t3dotgg/status/1713790082661175359
+- 📦 [Astro v3.3 - New experimental Picture component, shikiji syntax highlighting](https://astro.build/blog/astro-330/) https://twitter.com/astrodotbuild/status/1712487761570115931
+- 📦 [Next-international v1.1 - Improved App Router support](https://github.com/QuiiBz/next-international/releases/tag/1.1.0) https://twitter.com/tomlienard/status/1712466650434269320
+- 🎥 [Statically analysing React components for fun and profit](https://www.youtube.com/watch?v=kjOacmVsLSE): Sathya travaille sur le compiler React Forget. Il nous dévoile des détails intéressants sur le compiler tant attendu. Le compiler peut fonctionner sur du JS non typé. Il comprend la convention de nommage des hooks. Il raisonne localement, peut optimiser les composants en parallèle et être adopté incrémentalement. Son système d'alias analysis est encore plus complèxe que celui du moteur V8. On devrait en entendre à nouveau parler dans les prochaines semaines, notamment à la conf React-Advanced!
+- 👥 [Next.js Conf - 26 October - Speakers announced](https://nextjs.org/conf/speakers)
 - 👥 [React Advanced](https://reactadvanced.com/?utm_source=email&utm_medium=thisweekinreact) (Londres 🇬🇧, 20-23 Octobre) nous offre [\-10% - code "REACT10"](https://ti.to/gitnation/react-advanced-london-2023/discount/REACT10)
 
 <SubscribeFormEmbed placement="middle" />
@@ -87,11 +117,13 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 ## 📱 React-Native {#react-native}
 
 - 💸 [Moropo - build and scale open-source React Native tests 10x quicker](https://www.moropo.com/for-react-native?utm_source=newsletter&utm_medium=emails&utm_campaign=twir-20231018)
-- visionCAmera x7 faster https://twitter.com/mrousavy/status/1712855140439363880
-- Gluestack v1 - https://twitter.com/sanketsahu/status/1712729417309626570
-- [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
-- [radix-ui-react-native-icons](https://github.com/Eronred/radix-ui-react-native-icons)
-- [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
+- 📜 [Expo - Three ways to use network debugging](https://blog.expo.dev/three-ways-to-use-network-debugging-75fa6118fac6)
+- 📦 [Gluestack-ui v1.0 - Universal & Accessible UI Components for React Native & Web, Unstyled & Themed!](https://gluestack.io/ui/v1) https://twitter.com/sanketsahu/status/1712729417309626570
+- 📦 [React-Native 0.72.6](https://github.com/facebook/react-native/releases/tag/v0.72.6) https://twitter.com/alxhnt/status/1712513763298128320
+- 📦 [radix-ui-react-native-icons](https://github.com/Eronred/radix-ui-react-native-icons)
+- 📦 [react-native-visionos](https://github.com/callstack/react-native-visionos) https://twitter.com/o_kwasniewski/status/1714267035583328452
+- 📦 [react-native-unistyles v1.0](https://github.com/jpudysz/react-native-unistyles) https://twitter.com/jpudysz/status/1714189338458624278
+- 📦 [VisionCamera v3.4 - 7x faster](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v3.4.0) https://twitter.com/mrousavy/status/1713939416463397165
 
 ---
 
@@ -101,6 +133,7 @@ Use CoderPad to run fast, fair and real coding interviews that candidates and in
 - [Next 13.4 : Tour d’horizon des server actions](https://www.premieroctet.com/blog/next-server-actions)
 - [React Native Paris #4 - 19 octobre chez Octo](https://www.meetup.com/fr-FR/react-native-paris-meetup/events/296450009/)
 - [Les nouveautés de Next.JS 13 qui changent tout](https://www.youtube.com/watch?v=34Utg0x06rI)
+- [HTMX, l'anti Framework JS (vs React)](https://www.youtube.com/watch?v=YFFNVEL0Blw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -128,6 +161,7 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 - [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
 - [TC39-TG4 - New Task Group created to standardize Source Maps](https://www.ecma-international.org/news/ecma-tc39-ecmascript-initiates-a-new-task-group-to-standardize-source-maps//)
 - [async-cache-dedupe v2](https://github.com/mcollina/async-cache-dedupe)
+- [Node.js v20.8.1 & v18.18.2 - Security Releases](https://nodejs.org/en/blog/vulnerability/october-2023-security-releases)
 
 ---
 
