--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/163/index.mdx
@@ -52,20 +52,6 @@ Remix 2.1 https://github.com/remix-run/remix/releases https://twitter.com/remix_
 
 ---
 
-[Node.js 21 Available Now!](https://openjsf.org/announcement/2023/10/17/node-js-21-available-now/)
-
-https://twitter.com/sebastienlorber/status/1714321007618535792
-
-https://github.com/nodejs/node/pull/45684
-
-fetch?
-
-backpressure?
-
-https://twitter.com/cyco130/status/1714326606670389428
-
----
-
 TanStack Query v5
 
 https://tanstack.com/blog/announcing-tanstack-query-v5
@@ -149,19 +135,17 @@ Notre plateforme **interactive** et **immersive** permet un apprentissage effica
 
 ## 🔀 Autre {#other}
 
-- [Netlify Functions 2.0](https://www.netlify.com/blog/introducing-netlify-functions-2-0/)
-- [Understanding Cookies](https://vercel.com/guides/understanding-cookies)
-- [Oslo - A collection of auth-related utilities](https://github.com/pilcrowOnPaper/oslo)
-- [The design system ecosystem](https://bradfrost.com/blog/post/the-design-system-ecosystem/)
-- [CSS relative color syntax - in Chrome 119](https://developer.chrome.com/blog/css-relative-color-syntax/)
-- node security releases https://twitter.com/nodejs/status/1712505202383732831
-- [You can't get faster than No Build](https://world.hey.com/dhh/you-can-t-get-faster-than-no-build-7a44131c)
-- Parcel 2.10 https://twitter.com/devongovett/status/1712152854339998027 https://twitter.com/devongovett/status/1712169214872867288
-
-- [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
-- [TC39-TG4 - New Task Group created to standardize Source Maps](https://www.ecma-international.org/news/ecma-tc39-ecmascript-initiates-a-new-task-group-to-standardize-source-maps//)
-- [async-cache-dedupe v2](https://github.com/mcollina/async-cache-dedupe)
-- [Node.js v20.8.1 & v18.18.2 - Security Releases](https://nodejs.org/en/blog/vulnerability/october-2023-security-releases)
+- 👀 [Netlify Functions 2.0](https://www.netlify.com/blog/introducing-netlify-functions-2-0/)
+- 👀 [TC39-TG4 - New Task Group created to standardize Source Maps](https://www.ecma-international.org/news/ecma-tc39-ecmascript-initiates-a-new-task-group-to-standardize-source-maps//)
+- 📜 [Understanding Cookies](https://vercel.com/guides/understanding-cookies)
+- 📜 [The design system ecosystem](https://bradfrost.com/blog/post/the-design-system-ecosystem/)
+- 📜 [CSS relative color syntax - in Chrome 119](https://developer.chrome.com/blog/css-relative-color-syntax/)
+- 📜 [You can't get faster than No Build](https://world.hey.com/dhh/you-can-t-get-faster-than-no-build-7a44131c)
+- 📜 [Why Fetch Promise Doesn't Reject on Error Responses](https://kettanaito.com/blog/why-fetch-promise-doesnt-reject-on-error-responses)
+- 📦 [Parcel v2.10 - big performance improvements](https://github.com/parcel-bundler/parcel/releases/tag/v2.10.0)
+- 📦 [Node.js v21 - stable fetch/WebStreams, default module system flag, V8 11.8, v20 now LTS...](https://openjsf.org/announcement/2023/10/17/node-js-21-available-now/)
+- 📦 [Oslo - A collection of auth-related utilities](https://github.com/pilcrowOnPaper/oslo)
+- 📦 [async-cache-dedupe v2](https://github.com/mcollina/async-cache-dedupe)
 
 ---
 
